# ShooterGame

./: CMakeLists.txt  main.cpp
SDLC/Requirements/: Requirements.txt  Requirements_v1.odt
src/: AudioManager.cpp  AudioManager.hpp  Objects.cpp  Objects.hpp  PlatformHelper.cc  PlatformHelper.h  ScreenHandler.cpp  ScreenHandler.hpp
test/: TestAudioManager.cpp  TestObject.cpp  TestPlatformHelper.cpp
